tfidf and knn have succeeded

--- a/tfidf.ipynb
+++ b/tfidf.ipynb
@@ -12,13 +12,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 123,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-11-19T07:07:18.949483600Z",
-     "start_time": "2023-11-19T07:07:18.924173200Z"
+     "end_time": "2023-11-30T06:56:45.839247500Z",
+     "start_time": "2023-11-30T06:56:45.440303600Z"
     }
    },
    "outputs": [],
@@ -27,8 +27,7 @@
     "import re\n",
     "import numpy as np\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
-    "from sklearn.metrics.pairwise import cosine_similarity\n",
-    "from sklearn.metrics.pairwise import linear_kernel"
+    "from sklearn.metrics.pairwise import cosine_similarity, linear_kernel"
    ]
   },
   {
@@ -43,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 124,
    "outputs": [],
    "source": [
     "file = pd.read_excel('shortcourses2566.xlsx')"
@@ -51,8 +50,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-19T07:07:20.320578300Z",
-     "start_time": "2023-11-19T07:07:18.930461300Z"
+     "end_time": "2023-11-30T06:56:46.881546600Z",
+     "start_time": "2023-11-30T06:56:45.447173700Z"
     }
    },
    "id": "d3da61f397b9ca5d"
@@ -69,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 125,
    "outputs": [],
    "source": [
     "def clean_title(title):\n",
@@ -78,8 +77,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-19T07:07:20.334714700Z",
-     "start_time": "2023-11-19T07:07:20.323173900Z"
+     "end_time": "2023-11-30T06:56:46.891479Z",
+     "start_time": "2023-11-30T06:56:46.883546Z"
     }
    },
    "id": "e4dc26afbc54f2c0"
@@ -96,19 +95,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 126,
    "outputs": [],
    "source": [
     "content = file['หลักสูตรอบรมระยะสั้น'].drop_duplicates().fillna('')\n",
-    "df = pd.DataFrame(content)\n",
-    "content_clean = file['หลักสูตรอบรมระยะสั้น'].apply(clean_title).drop_duplicates().fillna('')\n",
-    "df_clean = pd.DataFrame(content_clean)"
+    "courses = content.sort_values().set_axis(range(0,len(content)))\n",
+    "courses_clean = courses.apply(clean_title)"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-19T07:07:20.383194Z",
-     "start_time": "2023-11-19T07:07:20.329197900Z"
+     "end_time": "2023-11-30T06:56:46.902741400Z",
+     "start_time": "2023-11-30T06:56:46.889341200Z"
     }
    },
    "id": "b3f21aedd43e6caf"
@@ -125,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 127,
    "outputs": [],
    "source": [
     "tfidf = TfidfVectorizer(stop_words='english')\n",
@@ -134,8 +132,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-19T07:07:20.394392900Z",
-     "start_time": "2023-11-19T07:07:20.389714700Z"
+     "end_time": "2023-11-30T06:56:46.921799900Z",
+     "start_time": "2023-11-30T06:56:46.904734100Z"
     }
    },
    "id": "cb5cd99f50462dca"
@@ -152,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 128,
    "outputs": [],
    "source": [
     "cosine_similarities = linear_kernel(tfidf_matrix)"
@@ -160,8 +158,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-19T07:07:20.406432600Z",
-     "start_time": "2023-11-19T07:07:20.397902300Z"
+     "end_time": "2023-11-30T06:56:46.921799900Z",
+     "start_time": "2023-11-30T06:56:46.913944800Z"
     }
    },
    "id": "ddf0d8ab318c7c87"
@@ -178,16 +176,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 129,
    "outputs": [],
    "source": [
-    "def get_cosine_similarity_recommendations(column, value, limit):\n",
+    "def recommender_tfidf(course_name, limit):\n",
     "    \"\"\"Return a dataframe of content recommendations based on TF-IDF cosine similarity.\n",
     "    \n",
     "    Args:\n",
-    "        df (object): Pandas dataframe containing the text data. \n",
+    "        courses (object): Pandas Series containing the text data. \n",
     "        column (string): Name of column used, i.e. 'title'. \n",
-    "        value (string): Name of title to get recommendations for, i.e. 1982 Ferrari 308 GTSi For Sale by Auction\n",
+    "        course_name (string): Name of title to get recommendations for, i.e. 1982 Ferrari 308 GTSi For Sale by Auction\n",
     "        cosine_similarities (array): Cosine similarities matrix from linear_kernel\n",
     "        limit (int, optional): Optional limit on number of recommendations to return. \n",
     "        \n",
@@ -196,18 +194,18 @@
     "    \"\"\"\n",
     "\n",
     "    # Return indices for the target dataframe column and drop any duplicates\n",
-    "    indices = pd.Series(df[column]).drop_duplicates()\n",
+    "    indices = pd.Series(courses).drop_duplicates()\n",
     "    \n",
-    "    # Get the index for the target value\n",
+    "    # Get the index for the target course_name\n",
     "    count = 0\n",
     "    for name in indices:\n",
-    "        if name == value:\n",
+    "        if name == course_name:\n",
     "            break\n",
     "        else:\n",
     "            count = count + 1\n",
     "    target_index = count\n",
     "\n",
-    "    # Get the cosine similarity scores for the target value\n",
+    "    # Get the cosine similarity scores for the target course_name\n",
     "    cosine_similarity_scores = list(enumerate(cosine_similarities[target_index]))\n",
     "\n",
     "    # Sort the cosine similarities in order of closest similarity\n",
@@ -215,19 +213,19 @@
     "\n",
     "    # Return tuple of the requested closest scores excluding the target item and index\n",
     "    cosine_similarity_scores = cosine_similarity_scores[1:limit+1]\n",
-    "\n",
-    "    # Extract the tuple values\n",
+    "    \n",
+    "    # Extract the tuple course_names\n",
     "    index = (x[0] for x in cosine_similarity_scores)\n",
     "    scores = (x[1] for x in cosine_similarity_scores)\n",
     "\n",
     "    # Get the indices for the closest items\n",
     "    recommendation_indices = [i[0] for i in cosine_similarity_scores]\n",
     "\n",
-    "    # Get the actutal recommendations\n",
-    "    recommendations = df[column].iloc[recommendation_indices]\n",
+    "    # Get the actual recommendations\n",
+    "    recommendations = courses.iloc[recommendation_indices]\n",
     "\n",
     "    # Return a recommendations\n",
-    "    recommendations = pd.DataFrame(list(zip(index, recommendations, scores)),\n",
+    "    recommendations = pd.DataFrame(tuple(zip(index, recommendations, scores)),\n",
     "                      columns=['index','recommendation', 'cosine_similarity_score'])\n",
     "\n",
     "    return recommendations"
@@ -235,37 +233,44 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-19T07:10:36.110115800Z",
-     "start_time": "2023-11-19T07:10:36.096714Z"
+     "end_time": "2023-11-30T06:56:46.931679700Z",
+     "start_time": "2023-11-30T06:56:46.922802100Z"
     }
    },
    "id": "991b48164c403112"
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "Test recommendation system using TF-IDF"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "1854ee47996040bd"
+  },
+  {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 130,
    "outputs": [
     {
      "data": {
-      "text/plain": "   index                                     recommendation  \\\n0    111  วัสดุวิศวกรรม (Engineering Materials) 2566 - ร...   \n1    113  หุ่นยนต์วิจักษณ์ (Robotics Appreciation) 2566 ...   \n2     48  นักวางแผนข้อมูลเมือง (City Data Planner : CDP)...   \n3    129  เตรียมความพร้อมด้านดิจิทัลและทักษะภาษาอังกฤษ ส...   \n4     52  การเตรียมความพร้อมในการคุ้มครองข้อมูลส่วนบุคคล...   \n5    108                                 รังสีวิทยาวินิจฉัย   \n6      0  หลักการและพื้นฐานของเครื่องมือทางรังสีวิทยา (B...   \n7      1  การวินิจฉัยภาวะฉุกเฉินจากอุบัติเหตุ (Diagnosti...   \n8      2  การวินิจฉัยภาวะฉุกเฉินที่ไม่ได้เกิดจากอุบัติเห...   \n9      3  การพัฒนาปัญญาด้วยเกมต่อศัพท์ภาษาอังกฤษ (Intell...   \n\n   cosine_similarity_score  \n0                 0.415857  \n1                 0.184917  \n2                 0.135525  \n3                 0.133195  \n4                 0.128937  \n5                 0.116179  \n6                 0.000000  \n7                 0.000000  \n8                 0.000000  \n9                 0.000000  ",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>index</th>\n      <th>recommendation</th>\n      <th>cosine_similarity_score</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>111</td>\n      <td>วัสดุวิศวกรรม (Engineering Materials) 2566 - ร...</td>\n      <td>0.415857</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>113</td>\n      <td>หุ่นยนต์วิจักษณ์ (Robotics Appreciation) 2566 ...</td>\n      <td>0.184917</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>48</td>\n      <td>นักวางแผนข้อมูลเมือง (City Data Planner : CDP)...</td>\n      <td>0.135525</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>129</td>\n      <td>เตรียมความพร้อมด้านดิจิทัลและทักษะภาษาอังกฤษ ส...</td>\n      <td>0.133195</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>52</td>\n      <td>การเตรียมความพร้อมในการคุ้มครองข้อมูลส่วนบุคคล...</td>\n      <td>0.128937</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>108</td>\n      <td>รังสีวิทยาวินิจฉัย</td>\n      <td>0.116179</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>0</td>\n      <td>หลักการและพื้นฐานของเครื่องมือทางรังสีวิทยา (B...</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>1</td>\n      <td>การวินิจฉัยภาวะฉุกเฉินจากอุบัติเหตุ (Diagnosti...</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>2</td>\n      <td>การวินิจฉัยภาวะฉุกเฉินที่ไม่ได้เกิดจากอุบัติเห...</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>9</th>\n      <td>3</td>\n      <td>การพัฒนาปัญญาด้วยเกมต่อศัพท์ภาษาอังกฤษ (Intell...</td>\n      <td>0.000000</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/plain": "   index                                     recommendation  \\\n0     43  การวินิจฉัยภาวะฉุกเฉินที่ไม่ได้เกิดจากอุบัติเห...   \n1    131  หลักการและพื้นฐานของเครื่องมือทางรังสีวิทยา (B...   \n2    152  เตรียมความพร้อมทางรังสีวิทยาสำหรับบุคลากรทางกา...   \n3      0                 Cancer Epidemiology and Prevention   \n4      1  Coaching Skill : Crafting a New You สำหรับนักศ...   \n5      2  Coaching Skill : Crafting a New You สำหรับบุคล...   \n6      3  Development Studies & Social Research Speciali...   \n7      4                 Digital Transformation: e-Document   \n8      5  Environmental Economics (USAC programs) - Fall...   \n9      6  Global Citizenship – โรงเรียนมงฟอร์ตวิทยาลัย ส...   \n\n   cosine_similarity_score  \n0                 0.697794  \n1                 0.360553  \n2                 0.249083  \n3                 0.000000  \n4                 0.000000  \n5                 0.000000  \n6                 0.000000  \n7                 0.000000  \n8                 0.000000  \n9                 0.000000  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>index</th>\n      <th>recommendation</th>\n      <th>cosine_similarity_score</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>43</td>\n      <td>การวินิจฉัยภาวะฉุกเฉินที่ไม่ได้เกิดจากอุบัติเห...</td>\n      <td>0.697794</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>131</td>\n      <td>หลักการและพื้นฐานของเครื่องมือทางรังสีวิทยา (B...</td>\n      <td>0.360553</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>152</td>\n      <td>เตรียมความพร้อมทางรังสีวิทยาสำหรับบุคลากรทางกา...</td>\n      <td>0.249083</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>0</td>\n      <td>Cancer Epidemiology and Prevention</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>1</td>\n      <td>Coaching Skill : Crafting a New You สำหรับนักศ...</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>2</td>\n      <td>Coaching Skill : Crafting a New You สำหรับบุคล...</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>3</td>\n      <td>Development Studies &amp; Social Research Speciali...</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>4</td>\n      <td>Digital Transformation: e-Document</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>5</td>\n      <td>Environmental Economics (USAC programs) - Fall...</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>9</th>\n      <td>6</td>\n      <td>Global Citizenship – โรงเรียนมงฟอร์ตวิทยาลัย ส...</td>\n      <td>0.000000</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 167,
+     "execution_count": 130,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "x = get_cosine_similarity_recommendations('หลักสูตรอบรมระยะสั้น',\n",
-    "                                      'การวิเคราะห์ข้อมูลอัจฉริยะด้วย RapidMiner (Intelligence Data analysis with RapidMiner) รุ่นที่ 2',\n",
-    "                                      10)\n",
-    "x"
+    "recommender_tfidf('การวินิจฉัยภาวะฉุกเฉินจากอุบัติเหตุ (Diagnostic Radiology of Traumatic Emergency)', 10)"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-19T07:10:36.564537100Z",
-     "start_time": "2023-11-19T07:10:36.557653900Z"
+     "end_time": "2023-11-30T06:56:46.942702900Z",
+     "start_time": "2023-11-30T06:56:46.933641900Z"
     }
    },
    "id": "c0f4db781812aba2"
@@ -273,7 +278,18 @@
   {
    "cell_type": "markdown",
    "source": [
-    "https://practicaldatascience.co.uk/data-science/how-to-create-content-recommendations-using-tf-idf"
+    "References"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "4ec2f48232934fc9"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "https://practicaldatascience.co.uk/data-science/how-to-create-content-recommendations-using-tf-idf\n",
+    "https://medium.com/analytics-vidhya/how-to-do-a-content-based-filtering-using-tf-idf-f623487ed0fd"
    ],
    "metadata": {
     "collapsed": false
