integrate tfidf and knn to compute hybrid outcome.

--- a/tfidf.ipynb
+++ b/tfidf.ipynb
@@ -12,13 +12,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 80,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-11-30T06:56:45.839247500Z",
-     "start_time": "2023-11-30T06:56:45.440303600Z"
+     "end_time": "2023-11-30T16:42:06.384687200Z",
+     "start_time": "2023-11-30T16:42:06.122682Z"
     }
    },
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 81,
    "outputs": [],
    "source": [
     "file = pd.read_excel('shortcourses2566.xlsx')"
@@ -50,8 +50,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-30T06:56:46.881546600Z",
-     "start_time": "2023-11-30T06:56:45.447173700Z"
+     "end_time": "2023-11-30T16:42:08.607564200Z",
+     "start_time": "2023-11-30T16:42:06.129542700Z"
     }
    },
    "id": "d3da61f397b9ca5d"
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 82,
    "outputs": [],
    "source": [
     "def clean_title(title):\n",
@@ -77,8 +77,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-30T06:56:46.891479Z",
-     "start_time": "2023-11-30T06:56:46.883546Z"
+     "end_time": "2023-11-30T16:42:08.619047Z",
+     "start_time": "2023-11-30T16:42:08.611981400Z"
     }
    },
    "id": "e4dc26afbc54f2c0"
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 83,
    "outputs": [],
    "source": [
     "content = file['หลักสูตรอบรมระยะสั้น'].drop_duplicates().fillna('')\n",
@@ -105,8 +105,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-30T06:56:46.902741400Z",
-     "start_time": "2023-11-30T06:56:46.889341200Z"
+     "end_time": "2023-11-30T16:42:08.676988800Z",
+     "start_time": "2023-11-30T16:42:08.619047Z"
     }
    },
    "id": "b3f21aedd43e6caf"
@@ -123,17 +123,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 84,
    "outputs": [],
    "source": [
     "tfidf = TfidfVectorizer(stop_words='english')\n",
-    "tfidf_matrix = tfidf.fit_transform(content_clean)"
+    "tfidf_matrix = tfidf.fit_transform(courses_clean)"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-30T06:56:46.921799900Z",
-     "start_time": "2023-11-30T06:56:46.904734100Z"
+     "end_time": "2023-11-30T16:42:08.704101500Z",
+     "start_time": "2023-11-30T16:42:08.675952Z"
     }
    },
    "id": "cb5cd99f50462dca"
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 85,
    "outputs": [],
    "source": [
     "cosine_similarities = linear_kernel(tfidf_matrix)"
@@ -158,8 +158,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-30T06:56:46.921799900Z",
-     "start_time": "2023-11-30T06:56:46.913944800Z"
+     "end_time": "2023-11-30T16:42:08.742604700Z",
+     "start_time": "2023-11-30T16:42:08.701553800Z"
     }
    },
    "id": "ddf0d8ab318c7c87"
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 121,
    "outputs": [],
    "source": [
     "def recommender_tfidf(course_name, limit):\n",
@@ -226,15 +226,21 @@
     "\n",
     "    # Return a recommendations\n",
     "    recommendations = pd.DataFrame(tuple(zip(index, recommendations, scores)),\n",
-    "                      columns=['index','recommendation', 'cosine_similarity_score'])\n",
+    "                      columns=['Index','Course', 'Cosine Similarity Score'])\n",
+    "\n",
+    "    # Take index from column 'index'\n",
+    "    idx = recommendations['Index']\n",
+    "    \n",
+    "    # Set and sort index\n",
+    "    recommendations = recommendations.set_axis(idx).drop(columns='Index')\n",
     "\n",
     "    return recommendations"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-30T06:56:46.931679700Z",
-     "start_time": "2023-11-30T06:56:46.922802100Z"
+     "end_time": "2023-11-30T16:46:50.018261200Z",
+     "start_time": "2023-11-30T16:46:49.980929900Z"
     }
    },
    "id": "991b48164c403112"
@@ -251,14 +257,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 122,
    "outputs": [
     {
      "data": {
-      "text/plain": "   index                                     recommendation  \\\n0     43  การวินิจฉัยภาวะฉุกเฉินที่ไม่ได้เกิดจากอุบัติเห...   \n1    131  หลักการและพื้นฐานของเครื่องมือทางรังสีวิทยา (B...   \n2    152  เตรียมความพร้อมทางรังสีวิทยาสำหรับบุคลากรทางกา...   \n3      0                 Cancer Epidemiology and Prevention   \n4      1  Coaching Skill : Crafting a New You สำหรับนักศ...   \n5      2  Coaching Skill : Crafting a New You สำหรับบุคล...   \n6      3  Development Studies & Social Research Speciali...   \n7      4                 Digital Transformation: e-Document   \n8      5  Environmental Economics (USAC programs) - Fall...   \n9      6  Global Citizenship – โรงเรียนมงฟอร์ตวิทยาลัย ส...   \n\n   cosine_similarity_score  \n0                 0.697794  \n1                 0.360553  \n2                 0.249083  \n3                 0.000000  \n4                 0.000000  \n5                 0.000000  \n6                 0.000000  \n7                 0.000000  \n8                 0.000000  \n9                 0.000000  ",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>index</th>\n      <th>recommendation</th>\n      <th>cosine_similarity_score</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>43</td>\n      <td>การวินิจฉัยภาวะฉุกเฉินที่ไม่ได้เกิดจากอุบัติเห...</td>\n      <td>0.697794</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>131</td>\n      <td>หลักการและพื้นฐานของเครื่องมือทางรังสีวิทยา (B...</td>\n      <td>0.360553</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>152</td>\n      <td>เตรียมความพร้อมทางรังสีวิทยาสำหรับบุคลากรทางกา...</td>\n      <td>0.249083</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>0</td>\n      <td>Cancer Epidemiology and Prevention</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>1</td>\n      <td>Coaching Skill : Crafting a New You สำหรับนักศ...</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>2</td>\n      <td>Coaching Skill : Crafting a New You สำหรับบุคล...</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>3</td>\n      <td>Development Studies &amp; Social Research Speciali...</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>4</td>\n      <td>Digital Transformation: e-Document</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>5</td>\n      <td>Environmental Economics (USAC programs) - Fall...</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>9</th>\n      <td>6</td>\n      <td>Global Citizenship – โรงเรียนมงฟอร์ตวิทยาลัย ส...</td>\n      <td>0.000000</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/plain": "                                                  Course  \\\nIndex                                                      \n43     การวินิจฉัยภาวะฉุกเฉินที่ไม่ได้เกิดจากอุบัติเห...   \n131    หลักการและพื้นฐานของเครื่องมือทางรังสีวิทยา (B...   \n152    เตรียมความพร้อมทางรังสีวิทยาสำหรับบุคลากรทางกา...   \n0                     Cancer Epidemiology and Prevention   \n1      Coaching Skill : Crafting a New You สำหรับนักศ...   \n2      Coaching Skill : Crafting a New You สำหรับบุคล...   \n3      Development Studies & Social Research Speciali...   \n4                     Digital Transformation: e-Document   \n5      Environmental Economics (USAC programs) - Fall...   \n6      Global Citizenship – โรงเรียนมงฟอร์ตวิทยาลัย ส...   \n\n       Cosine Similarity Score  \nIndex                           \n43                    0.697794  \n131                   0.360553  \n152                   0.249083  \n0                     0.000000  \n1                     0.000000  \n2                     0.000000  \n3                     0.000000  \n4                     0.000000  \n5                     0.000000  \n6                     0.000000  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Course</th>\n      <th>Cosine Similarity Score</th>\n    </tr>\n    <tr>\n      <th>Index</th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>43</th>\n      <td>การวินิจฉัยภาวะฉุกเฉินที่ไม่ได้เกิดจากอุบัติเห...</td>\n      <td>0.697794</td>\n    </tr>\n    <tr>\n      <th>131</th>\n      <td>หลักการและพื้นฐานของเครื่องมือทางรังสีวิทยา (B...</td>\n      <td>0.360553</td>\n    </tr>\n    <tr>\n      <th>152</th>\n      <td>เตรียมความพร้อมทางรังสีวิทยาสำหรับบุคลากรทางกา...</td>\n      <td>0.249083</td>\n    </tr>\n    <tr>\n      <th>0</th>\n      <td>Cancer Epidemiology and Prevention</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Coaching Skill : Crafting a New You สำหรับนักศ...</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Coaching Skill : Crafting a New You สำหรับบุคล...</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Development Studies &amp; Social Research Speciali...</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>Digital Transformation: e-Document</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>Environmental Economics (USAC programs) - Fall...</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>Global Citizenship – โรงเรียนมงฟอร์ตวิทยาลัย ส...</td>\n      <td>0.000000</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 130,
+     "execution_count": 122,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,11 +275,116 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-30T06:56:46.942702900Z",
-     "start_time": "2023-11-30T06:56:46.933641900Z"
+     "end_time": "2023-11-30T16:46:50.492486Z",
+     "start_time": "2023-11-30T16:46:50.428420Z"
     }
    },
    "id": "c0f4db781812aba2"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Predata for hybrid recommendation"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "782f034ab119afb2"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "outputs": [],
+   "source": [
+    "def recommender_tfidf_all_courses(course_name):\n",
+    "    \"\"\"Return a dataframe of content recommendations based on TF-IDF cosine similarity.\n",
+    "    \n",
+    "    Args:\n",
+    "        courses (object): Pandas Series containing the text data. \n",
+    "        column (string): Name of column used, i.e. 'title'. \n",
+    "        course_name (string): Name of title to get recommendations for, i.e. 1982 Ferrari 308 GTSi For Sale by Auction\n",
+    "        cosine_similarities (array): Cosine similarities matrix from linear_kernel\n",
+    "        \n",
+    "    Returns: \n",
+    "        Pandas dataframe. \n",
+    "    \"\"\"\n",
+    "\n",
+    "    # Return indices for the target dataframe column and drop any duplicates\n",
+    "    indices = pd.Series(courses).drop_duplicates()\n",
+    "\n",
+    "    # Get the index for the target course_name\n",
+    "    count = 0\n",
+    "    for name in indices:\n",
+    "        if name == course_name:\n",
+    "            break\n",
+    "        else:\n",
+    "            count = count + 1\n",
+    "    target_index = count\n",
+    "\n",
+    "    # Get the cosine similarity scores for the target course_name\n",
+    "    cosine_similarity_scores = list(enumerate(cosine_similarities[target_index]))\n",
+    "\n",
+    "    # Sort the cosine similarities in order of closest similarity\n",
+    "    cosine_similarity_scores = sorted(cosine_similarity_scores, key=lambda x: x[1], reverse=True)\n",
+    "\n",
+    "    # Return tuple of the requested closest scores excluding the target item and index\n",
+    "    cosine_similarity_scores = cosine_similarity_scores[1:len(courses)]\n",
+    "\n",
+    "    # Extract the tuple course_names\n",
+    "    index = (x[0] for x in cosine_similarity_scores)\n",
+    "    scores = (x[1] for x in cosine_similarity_scores)\n",
+    "\n",
+    "    # Get the indices for the closest items\n",
+    "    recommendation_indices = [i[0] for i in cosine_similarity_scores]\n",
+    "\n",
+    "    # Get the actual recommendations\n",
+    "    recommendations = courses.iloc[recommendation_indices]\n",
+    "\n",
+    "    # Return a recommendations\n",
+    "    recommendations = pd.DataFrame(tuple(zip(index, recommendations, scores)),\n",
+    "                                   columns=['Index','Course', 'Score'])\n",
+    "    \n",
+    "    # Take index from column 'index'\n",
+    "    idx = recommendations['Index']\n",
+    "    \n",
+    "    # Set and sort index \n",
+    "    recommendations = recommendations.set_axis(idx).drop(columns='Index').sort_index()\n",
+    "    return recommendations"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-30T16:52:31.948788700Z",
+     "start_time": "2023-11-30T16:52:31.910602900Z"
+    }
+   },
+   "id": "594104f8545fe00"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "                                                  Course  Score\nIndex                                                          \n0                     Cancer Epidemiology and Prevention    0.0\n1      Coaching Skill : Crafting a New You สำหรับนักศ...    0.0\n2      Coaching Skill : Crafting a New You สำหรับบุคล...    0.0\n3      Development Studies & Social Research Speciali...    0.0\n4                     Digital Transformation: e-Document    0.0\n...                                                  ...    ...\n163                             เวชศาสตร์ครอบครัวขั้นสูง    0.0\n164    เวชศาสตร์ฟื้นฟูสำหรับแพทย์ฝึกอบรมเวชศาสตร์ฟื้น...    0.0\n165    แปลงจุดแข็ง เป็นคุณค่า สร้างชีวิตสู่ความสุข  (...    0.0\n166    แปลงจุดแข็ง เป็นคุณค่า สร้างชีวิตสู่ความสุข (S...    0.0\n167    “ฟูมฟักทักษะสำคัญในชีวิตและการทำงาน Skills4Lif...    0.0\n\n[167 rows x 2 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Course</th>\n      <th>Score</th>\n    </tr>\n    <tr>\n      <th>Index</th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Cancer Epidemiology and Prevention</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Coaching Skill : Crafting a New You สำหรับนักศ...</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Coaching Skill : Crafting a New You สำหรับบุคล...</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Development Studies &amp; Social Research Speciali...</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>Digital Transformation: e-Document</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>163</th>\n      <td>เวชศาสตร์ครอบครัวขั้นสูง</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>164</th>\n      <td>เวชศาสตร์ฟื้นฟูสำหรับแพทย์ฝึกอบรมเวชศาสตร์ฟื้น...</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>165</th>\n      <td>แปลงจุดแข็ง เป็นคุณค่า สร้างชีวิตสู่ความสุข  (...</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>166</th>\n      <td>แปลงจุดแข็ง เป็นคุณค่า สร้างชีวิตสู่ความสุข (S...</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>167</th>\n      <td>“ฟูมฟักทักษะสำคัญในชีวิตและการทำงาน Skills4Lif...</td>\n      <td>0.0</td>\n    </tr>\n  </tbody>\n</table>\n<p>167 rows × 2 columns</p>\n</div>"
+     },
+     "execution_count": 124,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "recommender_tfidf_all_courses('การวินิจฉัยภาวะฉุกเฉินจากอุบัติเหตุ (Diagnostic Radiology of Traumatic Emergency)')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-30T16:52:32.477817900Z",
+     "start_time": "2023-11-30T16:52:32.467162200Z"
+    }
+   },
+   "id": "791def1b6f809e22"
   },
   {
    "cell_type": "markdown",
