--- a/tfidf.ipynb
+++ b/tfidf.ipynb
@@ -12,13 +12,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 13,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-11-30T16:42:06.384687200Z",
-     "start_time": "2023-11-30T16:42:06.122682Z"
+     "end_time": "2023-12-02T18:27:24.267862400Z",
+     "start_time": "2023-12-02T18:27:24.225882600Z"
     }
    },
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 14,
    "outputs": [],
    "source": [
     "file = pd.read_excel('shortcourses2566.xlsx')"
@@ -50,8 +50,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-30T16:42:08.607564200Z",
-     "start_time": "2023-11-30T16:42:06.129542700Z"
+     "end_time": "2023-12-02T18:27:25.314041900Z",
+     "start_time": "2023-12-02T18:27:24.230145500Z"
     }
    },
    "id": "d3da61f397b9ca5d"
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 15,
    "outputs": [],
    "source": [
     "def clean_title(title):\n",
@@ -77,8 +77,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-30T16:42:08.619047Z",
-     "start_time": "2023-11-30T16:42:08.611981400Z"
+     "end_time": "2023-12-02T18:27:25.322214600Z",
+     "start_time": "2023-12-02T18:27:25.314041900Z"
     }
    },
    "id": "e4dc26afbc54f2c0"
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 16,
    "outputs": [],
    "source": [
     "content = file['หลักสูตรอบรมระยะสั้น'].drop_duplicates().fillna('')\n",
@@ -105,8 +105,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-30T16:42:08.676988800Z",
-     "start_time": "2023-11-30T16:42:08.619047Z"
+     "end_time": "2023-12-02T18:27:25.328926100Z",
+     "start_time": "2023-12-02T18:27:25.322214600Z"
     }
    },
    "id": "b3f21aedd43e6caf"
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 17,
    "outputs": [],
    "source": [
     "tfidf = TfidfVectorizer(stop_words='english')\n",
@@ -132,8 +132,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-30T16:42:08.704101500Z",
-     "start_time": "2023-11-30T16:42:08.675952Z"
+     "end_time": "2023-12-02T18:27:25.356282500Z",
+     "start_time": "2023-12-02T18:27:25.328926100Z"
     }
    },
    "id": "cb5cd99f50462dca"
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 18,
    "outputs": [],
    "source": [
     "cosine_similarities = linear_kernel(tfidf_matrix)"
@@ -158,8 +158,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-30T16:42:08.742604700Z",
-     "start_time": "2023-11-30T16:42:08.701553800Z"
+     "end_time": "2023-12-02T18:27:25.356282500Z",
+     "start_time": "2023-12-02T18:27:25.340844200Z"
     }
    },
    "id": "ddf0d8ab318c7c87"
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 19,
    "outputs": [],
    "source": [
     "def recommender_tfidf(course_name, limit):\n",
@@ -239,8 +239,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-30T16:46:50.018261200Z",
-     "start_time": "2023-11-30T16:46:49.980929900Z"
+     "end_time": "2023-12-02T18:27:25.356282500Z",
+     "start_time": "2023-12-02T18:27:25.353671600Z"
     }
    },
    "id": "991b48164c403112"
@@ -257,14 +257,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 20,
    "outputs": [
     {
      "data": {
       "text/plain": "                                                  Course  \\\nIndex                                                      \n43     การวินิจฉัยภาวะฉุกเฉินที่ไม่ได้เกิดจากอุบัติเห...   \n131    หลักการและพื้นฐานของเครื่องมือทางรังสีวิทยา (B...   \n152    เตรียมความพร้อมทางรังสีวิทยาสำหรับบุคลากรทางกา...   \n0                     Cancer Epidemiology and Prevention   \n1      Coaching Skill : Crafting a New You สำหรับนักศ...   \n2      Coaching Skill : Crafting a New You สำหรับบุคล...   \n3      Development Studies & Social Research Speciali...   \n4                     Digital Transformation: e-Document   \n5      Environmental Economics (USAC programs) - Fall...   \n6      Global Citizenship – โรงเรียนมงฟอร์ตวิทยาลัย ส...   \n\n       Cosine Similarity Score  \nIndex                           \n43                    0.697794  \n131                   0.360553  \n152                   0.249083  \n0                     0.000000  \n1                     0.000000  \n2                     0.000000  \n3                     0.000000  \n4                     0.000000  \n5                     0.000000  \n6                     0.000000  ",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Course</th>\n      <th>Cosine Similarity Score</th>\n    </tr>\n    <tr>\n      <th>Index</th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>43</th>\n      <td>การวินิจฉัยภาวะฉุกเฉินที่ไม่ได้เกิดจากอุบัติเห...</td>\n      <td>0.697794</td>\n    </tr>\n    <tr>\n      <th>131</th>\n      <td>หลักการและพื้นฐานของเครื่องมือทางรังสีวิทยา (B...</td>\n      <td>0.360553</td>\n    </tr>\n    <tr>\n      <th>152</th>\n      <td>เตรียมความพร้อมทางรังสีวิทยาสำหรับบุคลากรทางกา...</td>\n      <td>0.249083</td>\n    </tr>\n    <tr>\n      <th>0</th>\n      <td>Cancer Epidemiology and Prevention</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Coaching Skill : Crafting a New You สำหรับนักศ...</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Coaching Skill : Crafting a New You สำหรับบุคล...</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Development Studies &amp; Social Research Speciali...</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>Digital Transformation: e-Document</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>Environmental Economics (USAC programs) - Fall...</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>Global Citizenship – โรงเรียนมงฟอร์ตวิทยาลัย ส...</td>\n      <td>0.000000</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 122,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,8 +275,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-30T16:46:50.492486Z",
-     "start_time": "2023-11-30T16:46:50.428420Z"
+     "end_time": "2023-12-02T18:27:25.369444400Z",
+     "start_time": "2023-12-02T18:27:25.356282500Z"
     }
    },
    "id": "c0f4db781812aba2"
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 21,
    "outputs": [],
    "source": [
     "def recommender_tfidf_all_courses(course_name):\n",
@@ -354,22 +354,22 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-30T16:52:31.948788700Z",
-     "start_time": "2023-11-30T16:52:31.910602900Z"
+     "end_time": "2023-12-02T18:27:25.378461500Z",
+     "start_time": "2023-12-02T18:27:25.378461500Z"
     }
    },
    "id": "594104f8545fe00"
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 22,
    "outputs": [
     {
      "data": {
       "text/plain": "                                                  Course  Score\nIndex                                                          \n0                     Cancer Epidemiology and Prevention    0.0\n1      Coaching Skill : Crafting a New You สำหรับนักศ...    0.0\n2      Coaching Skill : Crafting a New You สำหรับบุคล...    0.0\n3      Development Studies & Social Research Speciali...    0.0\n4                     Digital Transformation: e-Document    0.0\n...                                                  ...    ...\n163                             เวชศาสตร์ครอบครัวขั้นสูง    0.0\n164    เวชศาสตร์ฟื้นฟูสำหรับแพทย์ฝึกอบรมเวชศาสตร์ฟื้น...    0.0\n165    แปลงจุดแข็ง เป็นคุณค่า สร้างชีวิตสู่ความสุข  (...    0.0\n166    แปลงจุดแข็ง เป็นคุณค่า สร้างชีวิตสู่ความสุข (S...    0.0\n167    “ฟูมฟักทักษะสำคัญในชีวิตและการทำงาน Skills4Lif...    0.0\n\n[167 rows x 2 columns]",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Course</th>\n      <th>Score</th>\n    </tr>\n    <tr>\n      <th>Index</th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Cancer Epidemiology and Prevention</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Coaching Skill : Crafting a New You สำหรับนักศ...</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Coaching Skill : Crafting a New You สำหรับบุคล...</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Development Studies &amp; Social Research Speciali...</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>Digital Transformation: e-Document</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>163</th>\n      <td>เวชศาสตร์ครอบครัวขั้นสูง</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>164</th>\n      <td>เวชศาสตร์ฟื้นฟูสำหรับแพทย์ฝึกอบรมเวชศาสตร์ฟื้น...</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>165</th>\n      <td>แปลงจุดแข็ง เป็นคุณค่า สร้างชีวิตสู่ความสุข  (...</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>166</th>\n      <td>แปลงจุดแข็ง เป็นคุณค่า สร้างชีวิตสู่ความสุข (S...</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>167</th>\n      <td>“ฟูมฟักทักษะสำคัญในชีวิตและการทำงาน Skills4Lif...</td>\n      <td>0.0</td>\n    </tr>\n  </tbody>\n</table>\n<p>167 rows × 2 columns</p>\n</div>"
      },
-     "execution_count": 124,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -380,11 +380,74 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-30T16:52:32.477817900Z",
-     "start_time": "2023-11-30T16:52:32.467162200Z"
+     "end_time": "2023-12-02T18:27:25.418873400Z",
+     "start_time": "2023-12-02T18:27:25.385505800Z"
     }
    },
    "id": "791def1b6f809e22"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "outputs": [],
+   "source": [
+    "def recommender_tfidf_by_user(user_name, n_recommendations):\n",
+    "    df = {\n",
+    "        'User': pd.Series(file['ชื่อ-นามสกุล (อังกฤษ)']),\n",
+    "        'Course': pd.Series(file['หลักสูตรอบรมระยะสั้น'])\n",
+    "    }\n",
+    "\n",
+    "    user_course = pd.DataFrame(df)\n",
+    "    selected_user_name = user_course.loc[user_course['User'] == user_name]\n",
+    "    selected_courses = selected_user_name['Course']\n",
+    "\n",
+    "    recommended_courses = [ recommender_tfidf_all_courses(x) for x in selected_courses]\n",
+    "\n",
+    "    # pre dataframe\n",
+    "    df = pd.DataFrame({\n",
+    "        'Course': [],\n",
+    "        'Score': []\n",
+    "    }).rename_axis('Index')\n",
+    "\n",
+    "    for x in recommended_courses:\n",
+    "        df = df._append(x)\n",
+    "    df =  df.sort_values('Score', ascending=False).drop_duplicates('Course')\n",
+    "    return df.head(n_recommendations)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-12-02T18:28:09.465019200Z",
+     "start_time": "2023-12-02T18:28:09.448715600Z"
+    }
+   },
+   "id": "fdf28ef643836d21"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "                                                  Course     Score\nIndex                                                             \n43     การวินิจฉัยภาวะฉุกเฉินที่ไม่ได้เกิดจากอุบัติเห...  0.697794\n42     การวินิจฉัยภาวะฉุกเฉินจากอุบัติเหตุ (Diagnosti...  0.697794\n131    หลักการและพื้นฐานของเครื่องมือทางรังสีวิทยา (B...  0.360553\n152    เตรียมความพร้อมทางรังสีวิทยาสำหรับบุคลากรทางกา...  0.249083\n140    หลักเศรษฐศาสตร์สาธารณสุข (Principle of Health ...  0.221962\n130    หลักการบริหารงานสาธารณสุข (Principle of Public...  0.193087\n133    หลักสูตรย่อยที่ 1 พื้นฐานการดูแลสุขภาพสัตว์เลี...  0.191831\n32     การตรวจวิเคราะห์พื้นฐานทางพิษวิทยาและการตรวจวิ...  0.180715\n154    เทคโนโลยีก๊าซชีวภาพ : หลักการการออกแบบ และการใ...  0.157094\n161    เรียนรู้การคิดเชิงออกแบบ (Design Thinking) : ท...  0.000000",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Course</th>\n      <th>Score</th>\n    </tr>\n    <tr>\n      <th>Index</th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>43</th>\n      <td>การวินิจฉัยภาวะฉุกเฉินที่ไม่ได้เกิดจากอุบัติเห...</td>\n      <td>0.697794</td>\n    </tr>\n    <tr>\n      <th>42</th>\n      <td>การวินิจฉัยภาวะฉุกเฉินจากอุบัติเหตุ (Diagnosti...</td>\n      <td>0.697794</td>\n    </tr>\n    <tr>\n      <th>131</th>\n      <td>หลักการและพื้นฐานของเครื่องมือทางรังสีวิทยา (B...</td>\n      <td>0.360553</td>\n    </tr>\n    <tr>\n      <th>152</th>\n      <td>เตรียมความพร้อมทางรังสีวิทยาสำหรับบุคลากรทางกา...</td>\n      <td>0.249083</td>\n    </tr>\n    <tr>\n      <th>140</th>\n      <td>หลักเศรษฐศาสตร์สาธารณสุข (Principle of Health ...</td>\n      <td>0.221962</td>\n    </tr>\n    <tr>\n      <th>130</th>\n      <td>หลักการบริหารงานสาธารณสุข (Principle of Public...</td>\n      <td>0.193087</td>\n    </tr>\n    <tr>\n      <th>133</th>\n      <td>หลักสูตรย่อยที่ 1 พื้นฐานการดูแลสุขภาพสัตว์เลี...</td>\n      <td>0.191831</td>\n    </tr>\n    <tr>\n      <th>32</th>\n      <td>การตรวจวิเคราะห์พื้นฐานทางพิษวิทยาและการตรวจวิ...</td>\n      <td>0.180715</td>\n    </tr>\n    <tr>\n      <th>154</th>\n      <td>เทคโนโลยีก๊าซชีวภาพ : หลักการการออกแบบ และการใ...</td>\n      <td>0.157094</td>\n    </tr>\n    <tr>\n      <th>161</th>\n      <td>เรียนรู้การคิดเชิงออกแบบ (Design Thinking) : ท...</td>\n      <td>0.000000</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "recommender_tfidf_by_user('PORPHAING JANTIP', 10)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-12-02T18:28:14.127820Z",
+     "start_time": "2023-12-02T18:28:14.107326700Z"
+    }
+   },
+   "id": "e2425ec0689e85cb"
   },
   {
    "cell_type": "markdown",
